<resources>
    <string name="app_name">Android RecyclerView Search</string>
    <string name="search_hint">Search</string>
    <string name="default_patient_name">KiTae Kim</string>
    <string name="default_pat_reg_no">102736</string>
    <string name="default_pat_gender">Male</string>
    <string name="default_pat_age">26 years</string>
    <string name="default_pat_loc">021 / 04 / 01</string>
    <string name="default_pat_disease">Chest Pain</string>
    <string name="default_pat_level">Level</string>
    <string name="default_category">Admission</string>
    <string name="default_brief_info">5/2(HD/POD) Priority A</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="header_btn_settings">설정</string>
    <string name="header_btn_init">초기화</string>
    <string name="header_btn_logout">로그아웃</string>
    <string name="timeline_SystomorDisease">[진단명]</string>
    <string name="timeline_department">진료과명</string>
    <string name="timeline_disease">Rt.heart failre, r/o HCAP</string>
    <string name="timeline_date">2018-01-10</string>
    <string name="ed_login_hintID">사번을 입력하세요</string>
    <string name="ed_login_hintPW">비밀번호를 입력하세요</string>
    <string name="ed_login_save">사번 저장하기</string>
    <string name="btn_login">로그인</string>
    <string name="btn_next">다음</string>
    <string name="et_searchPT">환자 번호 / 환자 이름 검색</string>
    <string name="my_patient_recent">최근 본 환자</string>
    <string name="my_patient_label">나의 환자</string>
    <string name="my_patient_hospitalization_cnt">0</string>
    <string name="my_patient_visitor_cnt">0</string>
    <string name="my_patient_emergency_cnt">0</string>
    <string name="my_patient_operation_cnt">0</string>
    <string name="my_patient_hospitalization_title">• 입원</string>
    <string name="my_patient_visitor_title">• 외래</string>
    <string name="my_patient_emergency_title">• 응급</string>
    <string name="my_patient_operation_title">수술</string>
    <string name="my_patient_btn_view_all">모두 보기 \u003e</string>
    <string name="quick_menu_record">• 외래경과</string>
    <string name="quick_menu_record_dept">작성과:</string>
    <string name="quick_menu_record_date">작성일:</string>
    <string name="quick_menu_record_firstWriter">작성자:</string>
    <string name="quick_menu_record_lastWriter">최종작성자:</string>
    <string name="quick_menu_record_opinion">소견></string>
    <string name="quick_menu_record_opinion_contents">\u003c initial problems \u003e \n
        #2 recent onset Lt sided weakness \n
        #4 bradycardia,sinus \n
        \u003c Assessment \u0026 paln \u003e \n
        A) bronchial asthma \n
        acute aggravating on chronic obstructive lung \n
        diseases \n
        P) PEF \n
        O2 supply \n
        repeated ABGA \n
        pulmonology consult </string>
    <string name="view_all">모두 보기 \u003e</string>
    <string name="record">의무기록</string>
    <string name="default_name">홍길동</string>
    <string name="default_ptnum">2052736</string>
    <string name="default_gender">M</string>
    <string name="default_age">26세</string>
    <string name="default_department">심장내과</string>
    <string name="default_location">091/04/01</string>
    <string name="slash">/</string>
    <string name="dot">\u2981</string>
    <string name="all_medical_record">전체의무기록</string>
    <string name="all_medical_department">전체진료과</string>
    <string name="former_recored">\u25c2 \t 이전기록</string>
    <string name="latter_recored">다음기록 \t \u25b8</string>
    <string name="wave">~</string>
    <string name="result">검사결과</string>
    <string name="default_vital_sign_date">2017-06-17 24:00</string>
    <string name="default_vital_sign_BPS">BP(S)</string>
    <string name="default_vital_sign_BPS_num">128</string>
    <string name="default_vital_sign_BPD">BP(D)</string>
    <string name="default_vital_sign_BPD_num">96</string>
    <string name="default_vital_sign_pulse">맥박</string>
    <string name="default_vital_sign_pulse_num">87</string>
    <string name="default_vital_sign_breath">호흡</string>
    <string name="default_vital_sign_breath_num">37</string>
    <string name="default_vital_sign_body_heat">체온</string>
    <string name="default_vital_sign_body_heat_num">36</string>
    <string name="io_title">I/O</string>
    <string name="io_intake">• Intake</string>
    <string name="io_output">• output</string>
    <string name="io_inout">• In-Out</string>
    <string name="order">처방조회</string>
    <string name="order_date1">2017-03-11</string>
    <string name="order_emergency">응급</string>
    <string name="order_prn">PRN</string>
    <string name="order_dc">DC</string>
    <string name="order_before_operation">• 수술 전</string>
    <string name="order_being_operation">• 수술 중</string>
    <string name="order_after_operation">• 수술 후</string>
    <string name="order_etc">• 정규 / 그 외</string>
    <string name="order_contents1">Ibuprofen Suspension [150mg {oral} \n qd q24h for 1 day] \n period : 04/06/2015 ~</string>
    <string name="order_contents2">Ibuprofen Suspension [150mg {oral} \n qd q24h for 1 day] \n period : 04/06/2015 ~ 05/06/2015]</string>
    <string name="order_contents3">Chest CT (Contrast) + 3D \n (Chest with other CT)NECK CT (3D, Contrast) \n CT 판독 의뢰 드림</string>
    <string name="select_button_scale">select_button_scale</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
</resources>